添加了编译按钮可以保存编辑信息到数据库的功能